compiler/src/test/resources/amyc/parser/failing/IntError1.grading.amy
object IntError 
  fn foo(): Int = { 42 }
end IntError